syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.leaf.common.grpc";
option java_outer_classname = "FileProto";

import "google/protobuf/timestamp.proto";
import "Common.proto";

service FileGrpcService {
    rpc uploadFiles(UploadFilesRequest) returns (FileResponse);
    rpc uploadImage(UploadOneImageRequest) returns (ImageResponse);
    rpc uploadVideo(UploadOneVideoRequest) returns (VideoResponse);
    rpc getFileByIds(GetFilesByIdsRequest) returns (GetFilesByIdsResponse);
    rpc deleteById(DeleteByIdRequest) returns (DeleteByIdResponse);
    rpc getFileImages(GetFileImagesRequest) returns (GetFileImagesResponse);
}

message UploadOneImageRequest {
    bytes file = 1;
    ResourceType resourceType = 2;
    string userId = 3;
}

message UploadOneVideoRequest {
    bytes file = 1;
    ResourceType resourceType = 2;
    string userId = 3;
}

message UploadFilesRequest {
    repeated bytes files = 1;
    ResourceType resourceType = 2;
    string userId = 3;
}

message GetFilesByIdsRequest {
    repeated string ids = 1;
}

message GetFilesByIdsResponse {
    repeated FileResponse files = 1;
}

message DeleteByIdRequest {
    string fileId = 1;
}

message DeleteByIdResponse {
    bool success = 1;
}

message VideoResponse {
    double playtimeSeconds = 1;
    string playtimeString = 2;
    string contentType = 3;
    string videoUrl = 4;
    string thumbnailUrl = 5;
    string previewVttUrl = 6;
    int64 fileSize = 7;
    string originFileName = 8;
    string publicId = 9;
    google.protobuf.Timestamp createdAt = 10;
    ResourceType resourceType = 11;
}

message ImageResponse {
    string contentType = 1;
    string imageUrl = 2;
    int64 fileSize = 3;
    string originFileName = 4;
    string publicId = 5;
    google.protobuf.Timestamp createdAt = 6;
    ResourceType resourceType = 7;
}

message FileResponse {
    string ownerId = 1;
    int64 totalSize = 2;
    repeated VideoResponse videos = 4;
    repeated ImageResponse images = 5;
    ResourceType resourceType = 6;
    google.protobuf.Timestamp createdAt = 7;
    google.protobuf.Timestamp updatedAt = 8;
}

message GetFileImagesRequest {
    string userId = 1;
    repeated ResourceType resourceTypes = 2;
    SearchRequest searchRequest = 3;
}

message GetFileImagesResponse {
    repeated ImageResponse data = 1;
    PageResponse pagination = 2;
}

enum ResourceType {
    RESOURCE_TYPE_UNSPECIFIED = 0;
    RESOURCE_TYPE_AVATAR = 1;
    RESOURCE_TYPE_COVER = 2;
    RESOURCE_TYPE_POST = 3;
    RESOURCE_TYPE_COMMENT = 4;
    RESOURCE_TYPE_MESSAGE = 5;
    RESOURCE_TYPE_OTHER = 6;
}